[package]
name = "counter_egui"
version = "2024.1129.1419"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "counter GUI with egui"
repository = "https://github.com/bestia-dev/counter_egui"
readme = "README.md"
license = "MIT"
keywords = ["tutorial","egui","rust","gui"]
categories = ["gui"]
publish = false

[dependencies]
egui = "0.29.1"
eframe = "0.29.1"
egui_extras = "0.29.1"

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
