[package]
name = "counter_egui"
version = "2025.403.1018"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "counter GUI with egui"
repository = "https://github.com/bestia-dev/counter_egui"
readme = "README.md"
license = "MIT"
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["tutorial","egui","rust","gui"]
categories = ["gui"]
publish = false

[dependencies]
egui = "0.29.1"
eframe = "0.29.1"
egui_extras = "0.29.1"

env_logger = { version = "0.11.5", default-features = false, features = [
    "auto-color",
    "humantime",
] }
